--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,6 +53,9 @@ about:
     be prompted for credentials or a passphrase if needed  when R calls out to git or
     ssh.'
   license_family: MIT
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'
+    - LICENSE
 
 extra:
   recipe-maintainers:
